@@ -1,4 +1,5 @@
-/***** BEGIN LICENSE BLOCK *****
+/*
+ **** BEGIN LICENSE BLOCK *****
  * Version: EPL 2.0/GPL 2.0/LGPL 2.1
  *
  * The contents of this file are subject to the Eclipse Public
@@ -41,15 +42,19 @@ import org.jruby.anno.JRubyMethod;
 import org.jruby.exceptions.RaiseException;
 import org.jruby.javasupport.JavaUtil;
 import org.jruby.runtime.Block;
-import org.jruby.runtime.ObjectAllocator;
 import org.jruby.runtime.ThreadContext;
 import org.jruby.runtime.Visibility;
 import org.jruby.runtime.builtin.IRubyObject;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
+
+import org.jruby.util.RubyStringBuilder;
 import org.jruby.util.TypeConverter;
+
+import static org.jruby.util.Inspector.*;
 
 /**
  * A proxy for wrapping <code>java.util.Map</code> instances.
@@ -68,15 +73,9 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         super(runtime, klazz, map);
     }
 
-    private static final ObjectAllocator ALLOCATOR = new ObjectAllocator() {
-        public MapJavaProxy allocate(Ruby runtime, RubyClass klazz) {
-            return new MapJavaProxy(runtime, klazz);
-        }
-    };
-
     public static RubyClass createMapJavaProxy(final Ruby runtime) {
         RubyClass MapJavaProxy = runtime.defineClass(
-            "MapJavaProxy", runtime.getJavaSupport().getConcreteProxyClass(), ALLOCATOR
+            "MapJavaProxy", runtime.getJavaSupport().getConcreteProxyClass(), MapJavaProxy::new
         );
         // this is done while proxy class is created.
         // See org.jruby.javasuppoer.java.createProxyClass()
@@ -85,19 +84,9 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         return MapJavaProxy;
     }
 
-    private RubyHashMap getOrCreateRubyHashMap() {
+    private RubyHashMap getOrCreateRubyHashMap(Ruby runtime) {
         if (wrappedMap == null) {
-            wrappedMap = new RubyHashMap(getRuntime(), this);
-        }
-        // (JavaProxy)recv).getObject() might raise exception when
-        // wrong number of args are given to the constructor.
-        IRubyObject oldExc = getRuntime().getGlobalVariables().get("$!"); // Save $!
-        try {
-            wrappedMap.setSize( getMapObject().size() );
-        }
-        catch (RaiseException e) {
-            wrappedMap.setSize(0);
-            getRuntime().getGlobalVariables().set("$!", oldExc); // Restore $!
+            wrappedMap = new RubyHashMap(runtime, this);
         }
         return wrappedMap;
     }
@@ -113,50 +102,56 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
             this.receiver = receiver;
         }
 
-        private void syncSize() { this.size = mapDelegate().size(); }
-
-        private void setSize(int size) { this.size = size; }
-
         // the underlying Map object operations should be delegated to
         private Map mapDelegate() { return receiver.getMapObject(); }
 
         @Override
-        public RubyFixnum rb_size() {
-            return getRuntime().newFixnum( mapDelegate().size() );
+        public int size() {
+            return mapDelegate().size();
         }
 
         @Override
-        public RubyBoolean empty_p() {
-            return mapDelegate().isEmpty() ? getRuntime().getTrue() : getRuntime().getFalse();
+        public RubyFixnum rb_size(ThreadContext context) {
+            return context.runtime.newFixnum( mapDelegate().size() );
+        }
+
+        @Override
+        public RubyBoolean empty_p(ThreadContext context) {
+            return mapDelegate().isEmpty() ? context.tru : context.fals;
         }
 
         @Override
         public IRubyObject inspect(ThreadContext context) {
-            syncSize();
-            return super.inspect(context);
+            final Ruby runtime = context.runtime;
+            final Map map = mapDelegate();
+
+            RubyString buf = inspectPrefix(context, receiver.getMetaClass());
+            RubyStringBuilder.cat(runtime, buf, SPACE);
+
+            if (size() == 0) {
+                RubyStringBuilder.cat(runtime, buf, EMPTY_HASH_BL);
+            } else if (runtime.isInspecting(map)) {
+                RubyStringBuilder.cat(runtime, buf, RECURSIVE_HASH_BL);
+            } else {
+                try {
+                    runtime.registerInspecting(map);
+                    buf.cat19(inspectHash(context));
+                } finally {
+                    runtime.unregisterInspecting(map);
+                }
+            }
+
+            return RubyStringBuilder.cat(runtime, buf, GT);
         }
 
         @Override
-        public RubyArray to_a() {
-            syncSize();
-            return super.to_a();
+        public RubyArray to_a(ThreadContext context) {
+            return super.to_a(context);
         }
 
         @Override
-        public RubyFixnum hash() {
+        public RubyFixnum hash(ThreadContext context) {
             return getRuntime().newFixnum( mapDelegate().hashCode() );
-        }
-
-        @Override
-        public RubyArray keys(ThreadContext context) {
-            syncSize();
-            return super.keys(context);
-        }
-
-        @Override
-        public RubyArray values(ThreadContext context) {
-            syncSize();
-            return super.values(context);
         }
 
         @Override
@@ -171,13 +166,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         }
 
         @Override
-        public RubyHash delete_ifInternal(final ThreadContext context, final Block block) {
-            RubyHash self = super.delete_ifInternal(context, block);
-            setSize( mapDelegate().size() );
-            return self;
-        }
-
-        @Override
         public IRubyObject internalPut(final IRubyObject key, final IRubyObject value) {
             return internalPutNoResize(key, value, true);
         }
@@ -189,7 +177,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
             final Map<Object, Object> map = mapDelegate();
             Object javaValue = value.toJava(Object.class);
             Object existing = map.put(key.toJava(Object.class), javaValue);
-            setSize( map.size() );
             if (existing != null) {
                 if (existing == javaValue) return value;
                 return JavaUtil.convertJavaToUsableRubyObject(runtime, existing);
@@ -203,7 +190,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
             @SuppressWarnings("unchecked")
             final Map<Object, Object> map = mapDelegate();
             map.put(key.decodeString(), value.toJava(Object.class));
-            setSize( map.size() );
         }
 
         @Override
@@ -239,7 +225,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
             if (value != null) {
                 map.remove(convertedKey);
-                setSize( map.size() );
                 return new RubyHashEntry(key.hashCode(), key, JavaUtil.convertJavaToUsableRubyObject(getRuntime(), value), null, null);
             }
             return NO_ENTRY;
@@ -252,7 +237,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
             if (map.containsKey(convertedKey)) {
                 map.remove(convertedKey);
-                setSize( map.size() );
                 return entry;
             }
 
@@ -275,15 +259,6 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         }
 
         @Override
-        public RubyBoolean compare(final ThreadContext context, final VisitorWithState<RubyHash> method, IRubyObject other) {
-            syncSize();
-            if ( other instanceof RubyHashMap ) {
-                ((RubyHashMap) other).syncSize();
-            }
-            return super.compare(context, method, other);
-        }
-
-        @Override
         public RubyBoolean has_key_p(IRubyObject key) {
             final Object convertedKey = key.toJava(Object.class);
             return getRuntime().newBoolean( mapDelegate().containsKey(convertedKey) );
@@ -296,7 +271,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         }
 
         @Override
-        public RubyHash rehash() {
+        public RubyHash rehash(ThreadContext context) {
             // java.util.Map does not expose rehash, and many maps don't use hashing, so we do nothing. #3142
             return this;
         }
@@ -304,7 +279,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         @Override
         public RubyBoolean compare_by_identity_p(ThreadContext context) {
             // NOTE: obviously little we can do to detect - but at least report Java built-in one :
-            return context.runtime.newBoolean( mapDelegate() instanceof java.util.IdentityHashMap );
+            return RubyBoolean.newBoolean(context, mapDelegate() instanceof java.util.IdentityHashMap );
         }
 
         @Override // re-invent @JRubyMethod(name = "any?")
@@ -359,9 +334,8 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         }
 
         @Override
-        public RubyHash rb_clear() {
+        public RubyHash rb_clear(ThreadContext context) {
             mapDelegate().clear();
-            setSize( 0 );
             return this;
         }
 
@@ -371,8 +345,8 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
         }
 
         @Override
-        public RubyHash to_hash() {
-            final Ruby runtime = getRuntime();
+        public RubyHash to_hash(ThreadContext context) {
+            final Ruby runtime = context.runtime;
             final RubyHash hash = new RubyHash(runtime);
             @SuppressWarnings("unchecked")
             Set<Map.Entry> entries = mapDelegate().entrySet();
@@ -406,36 +380,36 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
     @JRubyMethod(name = "default")
     public IRubyObject default_value_get(ThreadContext context) {
-        return getOrCreateRubyHashMap().default_value_get(context);
+        return getOrCreateRubyHashMap(context.runtime).default_value_get(context);
     }
 
     @JRubyMethod(name = "default")
     public IRubyObject default_value_get(ThreadContext context, IRubyObject arg) {
-        return getOrCreateRubyHashMap().default_value_get(context, arg);
+        return getOrCreateRubyHashMap(context.runtime).default_value_get(context, arg);
     }
 
     /** rb_hash_set_default
      *
      */
     @JRubyMethod(name = "default=", required = 1)
-    public IRubyObject default_value_set(final IRubyObject defaultValue) {
-        return getOrCreateRubyHashMap().default_value_set(defaultValue);
+    public IRubyObject default_value_set(ThreadContext context, final IRubyObject defaultValue) {
+        return getOrCreateRubyHashMap(context.runtime).default_value_set(context, defaultValue);
     }
 
     /** rb_hash_default_proc
      *
      */
     @JRubyMethod(name = "default_proc")
-    public IRubyObject default_proc() {
-        return getOrCreateRubyHashMap().default_proc();
+    public IRubyObject default_proc(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).default_proc(context);
     }
 
     /** rb_hash_set_default_proc
      *
      */
     @JRubyMethod(name = "default_proc=")
-    public IRubyObject set_default_proc(IRubyObject proc) {
-        return getOrCreateRubyHashMap().set_default_proc(proc);
+    public IRubyObject set_default_proc(ThreadContext context, IRubyObject proc) {
+        return getOrCreateRubyHashMap(context.runtime).set_default_proc(context, proc);
     }
 
     /** rb_hash_inspect
@@ -443,64 +417,63 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "inspect")
     public IRubyObject inspect(ThreadContext context) {
-        return getOrCreateRubyHashMap().inspect(context);
+        return getOrCreateRubyHashMap(context.runtime).inspect(context);
     }
 
     /** rb_hash_size
      *
      */
     @JRubyMethod(name = {"size", "length"})
-    public RubyFixnum rb_size() {
-        return getOrCreateRubyHashMap().rb_size();
+    public RubyFixnum rb_size(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).rb_size(context);
     }
 
     /** rb_hash_empty_p
      *
      */
     @JRubyMethod(name = "empty?")
-    public RubyBoolean empty_p() {
-        return getOrCreateRubyHashMap().empty_p();
+    public RubyBoolean empty_p(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).empty_p(context);
     }
 
     /** rb_hash_to_a
      *
      */
+    @Override
     @JRubyMethod(name = "to_a")
-    public RubyArray to_a() {
-        return getOrCreateRubyHashMap().to_a();
+    public RubyArray to_a(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).to_a(context);
     }
 
     @JRubyMethod(name = "to_proc")
     public RubyProc to_proc(ThreadContext context) {
-        IRubyObject newProc = getOrCreateRubyHashMap().callMethod("to_proc");
+        IRubyObject newProc = getOrCreateRubyHashMap(context.runtime).callMethod("to_proc");
 
         TypeConverter.checkType(context, newProc, context.runtime.getProc());
 
         return (RubyProc) newProc;
     }
 
-    /** rb_hash_to_s
-     *
-     */
+    // NOTE: keep Map#to_s -> toString as with other Java types
     @JRubyMethod(name = "to_s")
     public IRubyObject to_s(ThreadContext context) {
-        return getOrCreateRubyHashMap().to_s(context);
+        return RubyString.newString(context.runtime, getMapObject().toString());
     }
 
     /** rb_hash_rehash
      *
      */
     @JRubyMethod(name = "rehash", notImplemented = true)
-    public RubyHash rehash() {
-        return getOrCreateRubyHashMap().rehash();
+    public RubyHash rehash(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).rehash(context);
     }
 
     /** rb_hash_to_hash
      *
      */
     @JRubyMethod(name = { "to_hash", "to_h" })
-    public RubyHash to_hash() {
-        return getOrCreateRubyHashMap().to_hash();
+    public RubyHash to_hash(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).to_hash(context);
     }
 
     /** rb_hash_aset
@@ -508,7 +481,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = {"[]=", "store"}, required = 2)
     public IRubyObject op_aset(ThreadContext context, IRubyObject key, IRubyObject value) {
-        return getOrCreateRubyHashMap().op_aset(context, key, value);
+        return getOrCreateRubyHashMap(context.runtime).op_aset(context, key, value);
     }
 
     /** rb_hash_equal
@@ -516,7 +489,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "==")
     public IRubyObject op_equal(final ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().op_equal(context, other);
+        return getOrCreateRubyHashMap(context.runtime).op_equal(context, other);
     }
 
     /** rb_hash_eql
@@ -524,7 +497,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "eql?")
     public IRubyObject op_eql(final ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().op_eql(context, other);
+        return getOrCreateRubyHashMap(context.runtime).op_eql(context, other);
     }
 
     /** rb_hash_aref
@@ -532,35 +505,35 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "[]", required = 1)
     public IRubyObject op_aref(ThreadContext context, IRubyObject key) {
-        return getOrCreateRubyHashMap().op_aref(context, key);
+        return getOrCreateRubyHashMap(context.runtime).op_aref(context, key);
     }
 
     @JRubyMethod(name = "<", required = 1)
     public IRubyObject op_lt(ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().op_lt(context, other);
+        return getOrCreateRubyHashMap(context.runtime).op_lt(context, other);
     }
 
     @JRubyMethod(name = "<=", required = 1)
     public IRubyObject op_le(ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().op_le(context, other);
+        return getOrCreateRubyHashMap(context.runtime).op_le(context, other);
     }
 
     @JRubyMethod(name = ">", required = 1)
     public IRubyObject op_gt(ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().op_gt(context, other);
+        return getOrCreateRubyHashMap(context.runtime).op_gt(context, other);
     }
 
     @JRubyMethod(name = ">=", required = 1)
     public IRubyObject op_ge(ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().op_ge(context, other);
+        return getOrCreateRubyHashMap(context.runtime).op_ge(context, other);
     }
 
     /** rb_hash_hash
      *
      */
     @JRubyMethod(name = "hash")
-    public RubyFixnum hash() {
-        return getOrCreateRubyHashMap().hash();
+    public RubyFixnum hash(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).hash();
     }
 
     /** rb_hash_fetch
@@ -568,12 +541,12 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod
     public IRubyObject fetch(ThreadContext context, IRubyObject key, Block block) {
-        return getOrCreateRubyHashMap().fetch(context, key, block);
+        return getOrCreateRubyHashMap(context.runtime).fetch(context, key, block);
     }
 
     @JRubyMethod
     public IRubyObject fetch(ThreadContext context, IRubyObject key, IRubyObject _default, Block block) {
-        return getOrCreateRubyHashMap().fetch(context, key, _default, block);
+        return getOrCreateRubyHashMap(context.runtime).fetch(context, key, _default, block);
     }
 
     /** rb_hash_has_key_p
@@ -581,7 +554,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = {"has_key?", "key?", "include?", "member?"}, required = 1)
     public RubyBoolean has_key_p(ThreadContext context, IRubyObject key) {
-        return getOrCreateRubyHashMap().has_key_p(context, key);
+        return getOrCreateRubyHashMap(context.runtime).has_key_p(context, key);
     }
 
     /** rb_hash_has_value
@@ -589,7 +562,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = {"has_value?", "value?"}, required = 1)
     public RubyBoolean has_value_p(ThreadContext context, IRubyObject expected) {
-        return getOrCreateRubyHashMap().has_value_p(context, expected);
+        return getOrCreateRubyHashMap(context.runtime).has_value_p(context, expected);
     }
 
     /** rb_hash_each
@@ -597,7 +570,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = {"each", "each_pair"})
     public IRubyObject each(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().each(context, block);
+        return getOrCreateRubyHashMap(context.runtime).each(context, block);
     }
 
     /** rb_hash_each_value
@@ -605,7 +578,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "each_value")
     public IRubyObject each_value(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().each_value(context, block);
+        return getOrCreateRubyHashMap(context.runtime).each_value(context, block);
     }
 
     /** rb_hash_each_key
@@ -613,7 +586,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "each_key")
     public IRubyObject each_key(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().each_key(context, block);
+        return getOrCreateRubyHashMap(context.runtime).each_key(context, block);
     }
 
     /** rb_hash_select_bang
@@ -621,7 +594,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "select!")
     public IRubyObject select_bang(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().select_bang(context, block);
+        return getOrCreateRubyHashMap(context.runtime).select_bang(context, block);
     }
 
     /** rb_hash_keep_if
@@ -629,7 +602,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "keep_if")
     public IRubyObject keep_if(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().keep_if(context, block);
+        return getOrCreateRubyHashMap(context.runtime).keep_if(context, block);
     }
 
     /** rb_hash_index
@@ -637,7 +610,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "index")
     public IRubyObject index(ThreadContext context, IRubyObject expected) {
-        return getOrCreateRubyHashMap().index(context, expected);
+        return getOrCreateRubyHashMap(context.runtime).index(context, expected);
     }
 
     /** rb_hash_key
@@ -645,7 +618,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "key")
     public IRubyObject key(ThreadContext context, IRubyObject expected) {
-        return getOrCreateRubyHashMap().key(context, expected);
+        return getOrCreateRubyHashMap(context.runtime).key(context, expected);
     }
 
     /** rb_hash_keys
@@ -653,15 +626,15 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "keys")
     public RubyArray keys(ThreadContext context) {
-        return getOrCreateRubyHashMap().keys(context);
+        return getOrCreateRubyHashMap(context.runtime).keys(context);
     }
 
     /** rb_hash_values
      *
      */
     @JRubyMethod(name = { "values", "ruby_values" }) // collision with java.util.Map#values
-    public RubyArray rb_values() {
-        return getOrCreateRubyHashMap().rb_values();
+    public RubyArray rb_values(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).rb_values(context);
     }
 
     /** rb_hash_shift
@@ -669,7 +642,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "shift", notImplemented = true)
     public IRubyObject shift(ThreadContext context) {
-        return getOrCreateRubyHashMap().shift(context);
+        return getOrCreateRubyHashMap(context.runtime).shift(context);
     }
 
     /** rb_hash_delete
@@ -677,7 +650,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "delete")
     public IRubyObject delete(ThreadContext context, IRubyObject key, Block block) {
-        return getOrCreateRubyHashMap().delete(context, key, block);
+        return getOrCreateRubyHashMap(context.runtime).delete(context, key, block);
     }
 
     /** rb_hash_select
@@ -685,7 +658,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "select")
     public IRubyObject select(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().select(context, block);
+        return getOrCreateRubyHashMap(context.runtime).select(context, block);
     }
 
     /** rb_hash_delete_if
@@ -693,7 +666,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "delete_if")
     public IRubyObject delete_if(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().delete_if(context, block);
+        return getOrCreateRubyHashMap(context.runtime).delete_if(context, block);
     }
 
     /** rb_hash_reject
@@ -701,7 +674,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "reject")
     public IRubyObject reject(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().reject(context, block);
+        return getOrCreateRubyHashMap(context.runtime).reject(context, block);
     }
 
     /** rb_hash_reject_bang
@@ -709,15 +682,15 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "reject!")
     public IRubyObject reject_bang(final ThreadContext context, final Block block) {
-        return getOrCreateRubyHashMap().reject_bang(context, block);
+        return getOrCreateRubyHashMap(context.runtime).reject_bang(context, block);
     }
 
     /** rb_hash_clear
      *
      */
     @JRubyMethod(name = { "clear", "ruby_clear" }) // collision with java.util.Map#clear (return type)
-    public IRubyObject rb_clear() {
-        return getOrCreateRubyHashMap().rb_clear();
+    public IRubyObject rb_clear(ThreadContext context) {
+        return getOrCreateRubyHashMap(context.runtime).rb_clear(context);
     }
 
     /** rb_hash_invert
@@ -725,23 +698,33 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "invert")
     public RubyHash invert(final ThreadContext context) {
-        return getOrCreateRubyHashMap().invert(context);
+        return getOrCreateRubyHashMap(context.runtime).invert(context);
+    }
+
+    @Deprecated
+    public RubyHash merge_bang(final ThreadContext context, final IRubyObject other, final Block block) {
+        return merge_bang(context, new IRubyObject[]{other}, block);
     }
 
     /** rb_hash_merge_bang
      *
      */
-    @JRubyMethod(name = { "merge!", "update" }, required = 1)
-    public RubyHash merge_bang(final ThreadContext context, final IRubyObject other, final Block block) {
-        return getOrCreateRubyHashMap().merge_bang(context, other, block);
+    @JRubyMethod(name = { "merge!", "update" }, rest = true)
+    public RubyHash merge_bang(final ThreadContext context, final IRubyObject[] others, final Block block) {
+        return getOrCreateRubyHashMap(context.runtime).merge_bang(context, others, block);
+    }
+
+    @Deprecated
+    public RubyHash merge(ThreadContext context, IRubyObject other, Block block) {
+        return merge(context, new IRubyObject[]{other}, block);
     }
 
     /** rb_hash_merge
      *
      */
-    @JRubyMethod(name = { "merge", "ruby_merge" }) // collision with java.util.Map#merge on Java 8+
-    public RubyHash merge(ThreadContext context, IRubyObject other, Block block) {
-        return getOrCreateRubyHashMap().merge(context, other, block);
+    @JRubyMethod(name = { "merge", "ruby_merge" }, rest = true) // collision with java.util.Map#merge on Java 8+
+    public RubyHash merge(ThreadContext context, IRubyObject[] others, Block block) {
+        return getOrCreateRubyHashMap(context.runtime).merge(context, others, block);
     }
 
     /** rb_hash_initialize_copy
@@ -749,7 +732,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "initialize_copy", visibility = Visibility.PRIVATE)
     public RubyHash initialize_copy(ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().initialize_copy(context, other);
+        return getOrCreateRubyHashMap(context.runtime).initialize_copy(context, other);
     }
 
     /** rb_hash_replace
@@ -757,7 +740,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = { "replace", "ruby_replace" }, required = 1) // collision with java.util.Map#replace on Java 8+
     public RubyHash replace(final ThreadContext context, IRubyObject other) {
-        return getOrCreateRubyHashMap().replace(context, other);
+        return getOrCreateRubyHashMap(context.runtime).replace(context, other);
     }
 
     /** rb_hash_values_at
@@ -765,32 +748,32 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
      */
     @JRubyMethod(name = "values_at", rest = true)
     public RubyArray values_at(ThreadContext context, IRubyObject[] args) {
-        return getOrCreateRubyHashMap().values_at(context, args);
+        return getOrCreateRubyHashMap(context.runtime).values_at(context, args);
     }
 
     @JRubyMethod(name = "fetch_values", rest = true)
     public RubyArray fetch_values(ThreadContext context, IRubyObject[] args, Block block) {
-        return getOrCreateRubyHashMap().fetch_values(context, args, block);
+        return getOrCreateRubyHashMap(context.runtime).fetch_values(context, args, block);
     }
 
     @JRubyMethod(name = "assoc")
     public IRubyObject assoc(final ThreadContext context, final IRubyObject obj) {
-        return getOrCreateRubyHashMap().assoc(context, obj);
+        return getOrCreateRubyHashMap(context.runtime).assoc(context, obj);
     }
 
     @JRubyMethod(name = "rassoc")
     public IRubyObject rassoc(final ThreadContext context, final IRubyObject obj) {
-        return getOrCreateRubyHashMap().rassoc(context, obj);
+        return getOrCreateRubyHashMap(context.runtime).rassoc(context, obj);
     }
 
     @JRubyMethod(name = "flatten")
     public IRubyObject flatten(ThreadContext context) {
-        return getOrCreateRubyHashMap().flatten(context);
+        return getOrCreateRubyHashMap(context.runtime).flatten(context);
     }
 
     @JRubyMethod(name = "flatten")
     public IRubyObject flatten(ThreadContext context, IRubyObject level) {
-        return getOrCreateRubyHashMap().flatten(context, level);
+        return getOrCreateRubyHashMap(context.runtime).flatten(context, level);
     }
 
     @JRubyMethod(name = "compare_by_identity")
@@ -800,7 +783,7 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
     @JRubyMethod(name = "compare_by_identity?")
     public IRubyObject compare_by_identity_p(ThreadContext context) {
-        return getOrCreateRubyHashMap().compare_by_identity_p(context);
+        return getOrCreateRubyHashMap(context.runtime).compare_by_identity_p(context);
     }
 
     @Override
@@ -815,25 +798,25 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
     @JRubyMethod(name = "any?", optional = 1)
     public IRubyObject any_p(ThreadContext context, IRubyObject[] args, Block block) {
-        return getOrCreateRubyHashMap().any_p(context, args, block);
+        return getOrCreateRubyHashMap(context.runtime).any_p(context, args, block);
     }
 
     @JRubyMethod(name = "dig", required = 1, rest = true)
     public IRubyObject dig(ThreadContext context, IRubyObject[] args) {
-        return getOrCreateRubyHashMap().dig(context, args);
+        return getOrCreateRubyHashMap(context.runtime).dig(context, args);
     }
 
     @SuppressWarnings("unchecked")
     private MapJavaProxy dupImpl(final String method) {
         final Map map = getMapObject();
         try {
-            Map newMap = map.getClass().newInstance();
+            Map newMap = map.getClass().getConstructor().newInstance();
             newMap.putAll(map);
             MapJavaProxy proxy = new MapJavaProxy(getRuntime(), metaClass);
             proxy.setObject(newMap);
             return proxy;
         }
-        catch (InstantiationException|IllegalAccessException ex) {
+        catch (InstantiationException|IllegalAccessException|NoSuchMethodException| InvocationTargetException ex) {
             final RaiseException e = getRuntime().newNotImplementedError("can't "+ method +" Map of type " + getObject().getClass().getName());
             e.initCause(ex); throw e;
         }
@@ -845,17 +828,17 @@ public final class MapJavaProxy extends ConcreteJavaProxy {
 
     @Override
     public final RubyHash convertToHash() {
-        return getOrCreateRubyHashMap();
+        return getOrCreateRubyHashMap(getRuntime());
     }
 
     @Deprecated
     public IRubyObject op_aset19(ThreadContext context, IRubyObject key, IRubyObject value) {
-        return getOrCreateRubyHashMap().op_aset19(context, key, value);
+        return getOrCreateRubyHashMap(context.runtime).op_aset19(context, key, value);
     }
 
     @Deprecated
     public IRubyObject sort(ThreadContext context, Block block) {
-        return getOrCreateRubyHashMap().sort(context, block);
+        return getOrCreateRubyHashMap(context.runtime).sort(context, block);
     }
 
 }
