@@ -37,16 +37,20 @@ import org.jruby.runtime.Block;
 import org.jruby.runtime.Helpers;
 import org.jruby.runtime.ThreadContext;
 import org.jruby.runtime.builtin.IRubyObject;
+import org.jruby.util.Inspector;
+import org.jruby.util.RubyStringBuilder;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 
 import static org.jruby.javasupport.JavaUtil.convertJavaArrayToRuby;
 import static org.jruby.javasupport.JavaUtil.convertJavaToUsableRubyObject;
+import static org.jruby.javasupport.JavaUtil.inspectObject;
 import static org.jruby.javasupport.JavaUtil.unwrapIfJavaObject;
 import static org.jruby.javasupport.JavaUtil.unwrapJavaObject;
 import static org.jruby.runtime.Helpers.invokedynamic;
 import static org.jruby.runtime.invokedynamic.MethodNames.OP_EQUAL;
+import static org.jruby.util.Inspector.*;
 
 /**
  * Java::JavaUtil package extensions.
@@ -60,6 +64,9 @@ public abstract class JavaUtil {
         JavaExtensions.put(runtime, java.util.Iterator.class, (proxyClass) -> Iterator.define(runtime, proxyClass));
         JavaExtensions.put(runtime, java.util.Collection.class, (proxyClass) -> Collection.define(runtime, proxyClass));
         JavaExtensions.put(runtime, java.util.List.class, (proxyClass) -> List.define(runtime, proxyClass));
+        JavaExtensions.put(runtime, java.util.Date.class, (dateClass) -> {
+            dateClass.addMethod("inspect", new JavaLang.InspectValue(dateClass));
+        });
     }
 
     @JRubyModule(name = "Java::JavaUtil::Enumeration", include = "Enumerable")
@@ -133,7 +140,7 @@ public abstract class JavaUtil {
         @JRubyMethod(name = { "include?", "member?" }) // @override Enumerable#include?
         public static RubyBoolean include_p(final ThreadContext context, final IRubyObject self, final IRubyObject obj) {
             final java.util.Collection coll = unwrapIfJavaObject(self);
-            return context.runtime.newBoolean( coll.contains( obj.toJava(java.lang.Object.class) ) );
+            return RubyBoolean.newBoolean(context,  coll.contains( obj.toJava(java.lang.Object.class) ) );
         }
 
         // NOTE: first might conflict with some Java types (e.g. java.util.Deque) thus providing a ruby_ alias
@@ -245,6 +252,44 @@ public abstract class JavaUtil {
         @JRubyMethod
         public static IRubyObject join(final ThreadContext context, final IRubyObject self, final IRubyObject sep) {
             return to_a(context, self).join(context, sep);
+        }
+
+        // #<Java::JavaUtil::ArrayList: [1, 2, 3]>
+        @JRubyMethod(name = "inspect")
+        public static RubyString inspect(final ThreadContext context, final IRubyObject self) {
+            final Ruby runtime = context.runtime;
+            final java.util.Collection coll = unwrapIfJavaObject(self);
+
+            RubyString buf = inspectPrefix(context, self.getMetaClass());
+            RubyStringBuilder.cat(runtime, buf, Inspector.SPACE);
+
+            if (runtime.isInspecting(coll)) {
+                RubyStringBuilder.cat(runtime, buf, RECURSIVE_ARRAY_BL);
+            } else {
+                RubyStringBuilder.cat(runtime, buf, BEG_BRACKET); // [
+                try {
+                    runtime.registerInspecting(coll);
+                    inspectElements(context, buf, coll);
+                } finally {
+                    runtime.unregisterInspecting(coll);
+                }
+                RubyStringBuilder.cat(runtime, buf, END_BRACKET); // ]
+            }
+
+            return RubyStringBuilder.cat(runtime, buf, GT); // >
+        }
+
+        static void inspectElements(final ThreadContext context, final RubyString buf, final java.util.Collection coll) {
+            int i = 0;
+            for (Object elem : coll) {
+                RubyString s = inspectObject(context, elem);
+                if (i++ > 0) {
+                    RubyStringBuilder.cat(context.runtime, buf, Inspector.COMMA_SPACE); // ,
+                } else {
+                    buf.setEncoding(s.getEncoding());
+                }
+                buf.cat19(s);
+            }
         }
 
     }
@@ -615,9 +660,13 @@ public abstract class JavaUtil {
 
         final java.util.Collection clone;
         try {
-            clone = klass.newInstance();
+            clone = klass.getConstructor().newInstance();
         }
-        catch (IllegalAccessException e) {
+        catch (InvocationTargetException ite) {
+            // old newInstance did not wrap exceptions, so keep doing that for now
+            Helpers.throwException(ite.getCause()); return null;
+        }
+        catch (IllegalAccessException | NoSuchMethodException e) {
             // can not clone - most of Collections. returned types (e.g. EMPTY_LIST)
             return coll;
         }
